--- a/public/index.html
+++ b/public/index.html
@@ -72,8 +72,8 @@
   <script type="text/javascript" async src="//l.getsitecontrol.com/6y793m78.js">
   </script>
   <script type="text/javascript">
-  var scTop, ww = $(window).width(),
-    wh = $(window).height(),
+  var scTop, ww = $(window).width();
+    wh = $(window).height();
     scr_flag_sp = !1,
     recent_flg = !0,
     scroll_flg = !0,
