--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin="anonymous"></script>
 
   <script>
-    
+
     plugins: [
       // other plugins,
       new webpack.ProvidePlugin({
@@ -65,7 +65,7 @@
         $('.navbar-collapse').collapse('hide');
       }
     });
-  
+
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
@@ -77,6 +77,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.0.5/gsap.min.js"></script>
   <script src='https://kit.fontawesome.com/5e39c529d7.js'></script>
   <script>new WOW().init();</script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
 </body>
 
 </html>
