--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,12 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>monopo | Tokyo-based creative agency | Branding, Design, Digital Experience, Video production, Adverstising.
+  <title>Webdev Studios | Creative agency | Branding, Design, Digital Experience, Web production, Adverstising.
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/node_modules/owl.carousel/dist/assets/owl.carousel.min.css" />
+    <link rel="shortcut icon" href="favicon.ico" />
     <title>React App</title>
 </head>
 
