--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,15 @@
   <script src='https://kit.fontawesome.com/5e39c529d7.js'></script>
   <script>new WOW().init();</script>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script defer src="/__/firebase/7.13.0/firebase-app.js"></script>
+  <!-- include only the Firebase features as you need -->
+  <script defer src="/__/firebase/7.13.0/firebase-auth.js"></script>
+  <script defer src="/__/firebase/7.13.0/firebase-database.js"></script>
+  <script defer src="/__/firebase/7.13.0/firebase-messaging.js"></script>
+  <script defer src="/__/firebase/7.13.0/firebase-storage.js"></script>
+  <!-- initialize the SDK after all desired features are loaded -->
+  <script defer src="/__/firebase/init.js"></script>
 </body>
 
 </html>
